更新招聘信息和职位等级查询